Grammar/.antlr/RADENNParser.py
# Generated from c:/Users/ASUS/iman/elmos/fifth semester/Compiler/finalproject/us/RADENN/Grammar/RADENN.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RADENNParser ( Parser ):

    grammarFileName = "RADENN.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'continue'", "'break'", "'var'", 
                     "'dataset'", "'optimizer'", "'inputLayer'", "'hiddenLayer'", 
                     "'outputLayer'", "'network'", "'if'", "'elif'", "'else'", 
                     "'for'", "'while'", "'do'", "'function'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'not'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'and'", "'or'", "','", 
                     "';'", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "INT", "FLOAT", "STR", "IDENTIFIER", 
                      "NOT", "EQ", "PLUS", "MINUS", "MUL", "DIV", "MOD", 
                      "POW", "EE", "NE", "LT", "GT", "LTE", "GTE", "AND", 
                      "OR", "COMMA", "SEMICOLON", "LPAREN", "RPAREN", "LSQUARE", 
                      "RSQUARE", "LROUND", "RROUND", "NEWLINE", "WS", "COMMENT" ]

    RULE_start = 0
    RULE_program = 1
    RULE_statements = 2
    RULE_statement = 3
    RULE_expr = 4
    RULE_compExpr = 5
    RULE_arithExpr = 6
    RULE_term = 7
    RULE_factor = 8
    RULE_power = 9
    RULE_call = 10
    RULE_atom = 11
    RULE_listExpr = 12
    RULE_matExpr = 13
    RULE_matRow = 14
    RULE_datasetExpr = 15
    RULE_optimizerExpr = 16
    RULE_inputLayerExpr = 17
    RULE_hiddenLayerExpr = 18
    RULE_outputLayerExpr = 19
    RULE_networkExpr = 20
    RULE_ifExpr = 21
    RULE_elifExpr = 22
    RULE_elseExpr = 23
    RULE_forExpr = 24
    RULE_whileExpr = 25
    RULE_doWhileExpr = 26
    RULE_funcDef = 27

    ruleNames =  [ "start", "program", "statements", "statement", "expr", 
                   "compExpr", "arithExpr", "term", "factor", "power", "call", 
                   "atom", "listExpr", "matExpr", "matRow", "datasetExpr", 
                   "optimizerExpr", "inputLayerExpr", "hiddenLayerExpr", 
                   "outputLayerExpr", "networkExpr", "ifExpr", "elifExpr", 
                   "elseExpr", "forExpr", "whileExpr", "doWhileExpr", "funcDef" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    INT=18
    FLOAT=19
    STR=20
    IDENTIFIER=21
    NOT=22
    EQ=23
    PLUS=24
    MINUS=25
    MUL=26
    DIV=27
    MOD=28
    POW=29
    EE=30
    NE=31
    LT=32
    GT=33
    LTE=34
    GTE=35
    AND=36
    OR=37
    COMMA=38
    SEMICOLON=39
    LPAREN=40
    RPAREN=41
    LSQUARE=42
    RSQUARE=43
    LROUND=44
    RROUND=45
    NEWLINE=46
    WS=47
    COMMENT=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(RADENNParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(RADENNParser.EOF, 0)

        def getRuleIndex(self):
            return RADENNParser.RULE_start




    def start(self):

        localctx = RADENNParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.program()
            self.state = 57
            self.match(RADENNParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(RADENNParser.StatementsContext,0)


        def getRuleIndex(self):
            return RADENNParser.RULE_program




    def program(self):

        localctx = RADENNParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RADENNParser.StatementContext)
            else:
                return self.getTypedRuleContext(RADENNParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.NEWLINE)
            else:
                return self.getToken(RADENNParser.NEWLINE, i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.SEMICOLON)
            else:
                return self.getToken(RADENNParser.SEMICOLON, i)

        def getRuleIndex(self):
            return RADENNParser.RULE_statements




    def statements(self):

        localctx = RADENNParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39 or _la==46:
                self.state = 61
                _la = self._input.LA(1)
                if not(_la==39 or _la==46):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.statement()
            self.state = 76
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 69 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 68
                        _la = self._input.LA(1)
                        if not(_la==39 or _la==46):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 71 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==39 or _la==46):
                            break

                    self.state = 73
                    self.statement() 
                self.state = 78
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    _la = self._input.LA(1)
                    if not(_la==39 or _la==46):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(RADENNParser.ExprContext,0)


        def getRuleIndex(self):
            return RADENNParser.RULE_statement




    def statement(self):

        localctx = RADENNParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(RADENNParser.T__0)
                self.state = 87
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 86
                    self.expr()


                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(RADENNParser.T__1)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.match(RADENNParser.T__2)
                pass
            elif token in [4, 5, 6, 7, 8, 9, 10, 11, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 40, 42, 44]:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(RADENNParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(RADENNParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(RADENNParser.ExprContext,0)


        def compExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RADENNParser.CompExprContext)
            else:
                return self.getTypedRuleContext(RADENNParser.CompExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.AND)
            else:
                return self.getToken(RADENNParser.AND, i)

        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.OR)
            else:
                return self.getToken(RADENNParser.OR, i)

        def getRuleIndex(self):
            return RADENNParser.RULE_expr




    def expr(self):

        localctx = RADENNParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(RADENNParser.T__3)
                self.state = 95
                self.match(RADENNParser.IDENTIFIER)
                self.state = 96
                self.match(RADENNParser.EQ)
                self.state = 97
                self.expr()
                pass
            elif token in [5, 6, 7, 8, 9, 10, 11, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 25, 40, 42, 44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.compExpr()
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 99
                        _la = self._input.LA(1)
                        if not(_la==36 or _la==37):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 100
                        self.compExpr() 
                    self.state = 105
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(RADENNParser.NOT, 0)

        def compExpr(self):
            return self.getTypedRuleContext(RADENNParser.CompExprContext,0)


        def arithExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RADENNParser.ArithExprContext)
            else:
                return self.getTypedRuleContext(RADENNParser.ArithExprContext,i)


        def EE(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.EE)
            else:
                return self.getToken(RADENNParser.EE, i)

        def NE(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.NE)
            else:
                return self.getToken(RADENNParser.NE, i)

        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.LT)
            else:
                return self.getToken(RADENNParser.LT, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.GT)
            else:
                return self.getToken(RADENNParser.GT, i)

        def LTE(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.LTE)
            else:
                return self.getToken(RADENNParser.LTE, i)

        def GTE(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.GTE)
            else:
                return self.getToken(RADENNParser.GTE, i)

        def getRuleIndex(self):
            return RADENNParser.RULE_compExpr




    def compExpr(self):

        localctx = RADENNParser.CompExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_compExpr)
        self._la = 0 # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(RADENNParser.NOT)
                self.state = 109
                self.compExpr()
                pass
            elif token in [5, 6, 7, 8, 9, 10, 11, 14, 15, 16, 17, 18, 19, 20, 21, 24, 25, 40, 42, 44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.arithExpr()
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 111
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 67645734912) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 112
                        self.arithExpr() 
                    self.state = 117
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RADENNParser.TermContext)
            else:
                return self.getTypedRuleContext(RADENNParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.PLUS)
            else:
                return self.getToken(RADENNParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.MINUS)
            else:
                return self.getToken(RADENNParser.MINUS, i)

        def getRuleIndex(self):
            return RADENNParser.RULE_arithExpr




    def arithExpr(self):

        localctx = RADENNParser.ArithExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arithExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.term()
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 121
                    _la = self._input.LA(1)
                    if not(_la==24 or _la==25):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 122
                    self.term() 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RADENNParser.FactorContext)
            else:
                return self.getTypedRuleContext(RADENNParser.FactorContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.MUL)
            else:
                return self.getToken(RADENNParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.DIV)
            else:
                return self.getToken(RADENNParser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.MOD)
            else:
                return self.getToken(RADENNParser.MOD, i)

        def getRuleIndex(self):
            return RADENNParser.RULE_term




    def term(self):

        localctx = RADENNParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.factor()
            self.state = 133
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 129
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 469762048) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 130
                    self.factor() 
                self.state = 135
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(RADENNParser.FactorContext,0)


        def PLUS(self):
            return self.getToken(RADENNParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(RADENNParser.MINUS, 0)

        def power(self):
            return self.getTypedRuleContext(RADENNParser.PowerContext,0)


        def getRuleIndex(self):
            return RADENNParser.RULE_factor




    def factor(self):

        localctx = RADENNParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24, 25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                _la = self._input.LA(1)
                if not(_la==24 or _la==25):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 137
                self.factor()
                pass
            elif token in [5, 6, 7, 8, 9, 10, 11, 14, 15, 16, 17, 18, 19, 20, 21, 40, 42, 44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.power()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PowerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self):
            return self.getTypedRuleContext(RADENNParser.CallContext,0)


        def POW(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.POW)
            else:
                return self.getToken(RADENNParser.POW, i)

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RADENNParser.FactorContext)
            else:
                return self.getTypedRuleContext(RADENNParser.FactorContext,i)


        def getRuleIndex(self):
            return RADENNParser.RULE_power




    def power(self):

        localctx = RADENNParser.PowerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_power)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.call()
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 142
                    self.match(RADENNParser.POW)
                    self.state = 143
                    self.factor() 
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(RADENNParser.AtomContext,0)


        def LPAREN(self):
            return self.getToken(RADENNParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(RADENNParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RADENNParser.ExprContext)
            else:
                return self.getTypedRuleContext(RADENNParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RADENNParser.COMMA)
            else:
                return self.getToken(RADENNParser.COMMA, i)

        def getRuleIndex(self):
            return RADENNParser.RULE_call




    def call(self):

        localctx = RADENNParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.atom()
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 150
                self.match(RADENNParser.LPAREN)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 23089802891248) != 0):
                    self.state = 151
                    self.expr()
                    self.state = 156
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==38:
                        self.state = 152
                        self.match(RADENNParser.COMMA)
                        self.state = 153
                        self.expr()
                        self.state = 158
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 161
                self.match(RADENNParser.RPAREN)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(RADENNParser.INT, 0)

        def FLOAT(self):
            return self.getToken(RADENNParser.FLOAT, 0)

        def STR(self):
            return self.getToken(RADENNParser.STR, 0)

        def IDENTIFIER(self):
            return self.getToken(RADENNParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(RADENNParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(RADENNParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(RADENNParser.RPAREN, 0)

        def listExpr(self):
            return self.getTypedRuleContext(RADENNParser.ListExprContext,0)


        def matExpr(self):
            return self.getTypedRuleContext(RADENNParser.MatExprContext,0)


        def datasetExpr(self):
            return self.getTypedRuleContext(RADENNParser.DatasetExprContext,0)


        def optimizerExpr(self):
            return self.getTypedRuleContext(RADENNParser.OptimizerExprContext,0)


        def inputLayerExpr(self):
            return self.getTypedRuleContext(RADENNParser.InputLayerExprContext,0)


        def hiddenLayerExpr(self):
            return self.getTypedRuleContext(RADENNParser.HiddenLayerExprContext,0)


        def outputLayerExpr(self):
            return self.getTypedRuleContext(RADENNParser.OutputLayerExprContext,0)


        def networkExpr(self):
            return self.getTypedRuleContext(RADENNParser.NetworkExprContext,0)


        def ifExpr(self):
            return self.getTypedRuleContext(RADENNParser.IfExprContext,0)


        def forExpr(self):
            return self.getTypedRuleContext(RADENNParser.ForExprContext,0)


        def whileExpr(self):
            return self.getTypedRuleContext(RADENNParser.WhileExprContext,0)


        def doWhileExpr(self):
            return self.getTypedRuleContext(RADENNParser.DoWhileExprContext,0)


        def funcDef(self):
            return self.getTypedRuleContext(RADENNParser.FuncDefContext,0)


        def getRuleIndex(self):
            return RADENNParser.RULE_atom




    def atom(self):
